@@ -97,7 +97,7 @@ static NSString *toCAFilterType(PlatformCALayer::FilterType type)
 
 void RemoteLayerTreeHost::commit(const RemoteLayerTreeTransaction& transaction)
 {
-#ifndef NDEBUG
+#if !defined(NDEBUG) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 1080
     transaction.dump();
 #endif
 
